# atlas

./: .env.example  .gitignore  ATLAS_ARCHITECTURE.md  ATLAS_ROADMAP_V2.md  IMPLEMENTATION_ROADMAP.md  INDEX.md  QUICK_REFERENCE.md  README.md  START_HERE.md  docker-compose.yml  pyproject.toml  requirements-test.txt  requirements.txt
.github/workflows/: ci.yml
app/: main.py
app/agent/: orchestrator.py  policies.py
app/api/: routes.py  schemas.py
app/api/rest/: __init__.py  finance_routes.py  routes.py
app/core/: config.py  exceptions.py  permissions.py
app/data/: user_learning.json
app/db/: models.py  repositories.py  session.py
app/integrations/: base_email_client.py  calendar_client.py  claude_client.py  drive_client.py  email_classifier.py  email_models.py  gmail_client.py  google_auth.py  google_mcp.py  microsoft_auth.py  news_classifier.py  outlook_client.py  rss_client.py  simhash_utils.py  telegram_bot.py  tracked_scope.py
app/modules/: __init__.py
app/modules/approval/: __init__.py  service.py
app/modules/audit/: __init__.py
app/modules/briefing/: __init__.py  news_service.py  service.py
app/modules/calendar/: __init__.py  service.py
app/modules/drive/: __init__.py
app/modules/finance/: __init__.py  schemas.py  service.py  telegram.py
app/modules/gmail/: __init__.py
app/modules/inbox/: __init__.py  service.py
app/modules/inbox/docs/: email_module_evolution.md
app/modules/memory/: __init__.py  models.py  repository.py  schemas.py  scoring.py  service.py  utils.py
app/orchestrator/: __init__.py  intent_classifier.py  orchestrator.py
app/scheduler/: jobs.py
app/services/: calendar_service.py  drive_service.py
atlas_ai_assistant_starter/: .coverage  .env.example  .pre-commit-config.yaml  PROJECT_CONFIG.md  README.md  docs_project_scope.md  generate_report_v2.py  pyproject.toml  requirements-dev.txt  requirements.txt
atlas_ai_assistant_starter/app/: main.py
atlas_ai_assistant_starter/app/agent/: intent_classifier.py
atlas_ai_assistant_starter/app/api/: schemas.py
atlas_ai_assistant_starter/app/core/: logging.py  security.py
atlas_ai_assistant_starter/app/integrations/: rss_reader.py  telegram_bot.py
atlas_ai_assistant_starter/app/scheduler/: jobs.py
atlas_ai_assistant_starter/app/services/: briefing_service.py  calendar_service.py  inbox_service.py  news_service.py
atlas_ai_assistant_starter/tests/: test_approval.py  test_intent_classifier.py
contracts/openapi/: atlas-public.openapi.yaml
docs/: ATLAS_ARCHITECTURE.md  ATLAS_ROADMAP_V2.md  EXECUTIVE_SUMMARY.md  IMPLEMENTATION_ROADMAP.md  INDEX.md  PROJECT_CONFIG.md  QUICK_REFERENCE.md  TECHNICAL_DECISIONS.md  milestones.md
docs/modules/: email.md  finance.md  news.md
scripts/: auth_google.py  auth_microsoft.py  generate_report.py  generate_report_v2.py
tests/: conftest.py  test_adaptive_integration.py  test_approval.py  test_email_classifier.py  test_finance.py  test_finance_telegram.py  test_intent_classifier.py  test_memory_adaptive_scoring.py  test_memory_module.py  test_news_scope.py  test_orchestrator.py  test_policies.py  test_services.py  test_telegram_feedback.py
